--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "multiplicador-node",
+  "name": "matrizes-node",
   "version": "1.0.0",
   "description": "Projeto Node.js para multiplicação com testes",
-  "main": "multiplicar.js",
+  "main": "matrizes.js",
   "scripts": {
     "test": "jest"
   },
